# MppCompiler

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  README_LEX.md
data/: input.mpp  input.txt
examples/calculator/: Makefile
gui/: code_editor.py  main.py  overlay.py  syntax.py
src/: consts.h  lex_specs.l  lexer_specs.l  main.cpp  parse_tree.h  parser_grammer.y  symbol_table.h  tokens.h
src/analyzer/: branch_analyzer.cpp  expression_analyzer.cpp  function_analyzer.cpp  statement_analyzer.cpp
src/context/: context.h  generation_context.h  quadruple_context.h  scope_context.h
src/generator/: branch_generator.cpp  expression_generator.cpp  function_generator.cpp  statement_generator.cpp
src/parse_tree/: basic_nodes.h  branch_nodes.h  control_nodes.h  expression_nodes.h  function_nodes.h  loop_nodes.h  operator_nodes.h  parse_tree.h  statement_nodes.h  value_nodes.h
src/parse_tree/branches/: branch_analyzer.cpp  branch_generator.cpp  branch_nodes.h
src/parse_tree/expressions/: expression_analyzer.cpp  expression_evaluator.cpp  expression_generator.cpp  expression_nodes.h
src/parse_tree/functions/: function_analyzer.cpp  function_generator.cpp  function_nodes.h
src/parse_tree/statements/: statement_analyzer.cpp  statement_generator.cpp  statement_nodes.h
src/rules/: lexer_specs.l  parser_grammar.y
src/symbol_table/: symbol_table.h
src/utils/: consts.h  utils.h
